# QPIX_Optical

./: CMakeLists.txt  OpticksRun
app/: G4_QPIX.cpp
cfg/: G4History.macro  config.h.in  vis.mac
macros/: .gitignore  Template_Marley.mac  Template_Supernova_Neutrino.mac  nusperbin2d.root  nusperbin2d_shifted.root  nusperbin2d_shifted2s.root
src/: .PrimaryGeneration.cpp.swp  .TrackingAction.cpp.swp  AnalysisData.cpp  AnalysisData.h  AnalysisManager.cpp  AnalysisManager.h  CMakeLists.txt  DetectorConstruction.cpp  EventAction.cpp  G4OpticalPhysicsOpticks.cpp  G4OpticalPhysicsOpticks.hh  G4ScintillationOpticks.cpp  G4ScintillationOpticks.hh  MCParticle.h  OpticalMaterialProperties.cpp  OpticalMaterialProperties.h  PhysicsList.cpp  PhysicsList.hh  PrimaryGeneration.cpp  RunAction.cpp  SteppingAction.cpp  SteppingAction.h  SupernovaTiming.cpp  TrackingAction.cpp
